DevTools: report loadingFailed event for nav requests cancelled because of 204

Bug: 840962
Change-Id: I7df6c302cd13a2a0d8085b26cff4e2fa34f6aca0
Reviewed-on: https://chromium-review.googlesource.com/1054358
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557898}
Former-commit-id: 8b66f9ce6dced8ecb247d89105008867a273c698